代码扫描问题修复